<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.yousef.youdri.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.yousef.youdri.fragment.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.yousef.youdri.fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_list"
        android:name="com.yousef.youdri.fragment.ListFragment"
        android:label="@string/list"
        tools:layout="@layout/fragment_list" />
</navigation>