<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.registration.LoginActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/login"
            android:contentDescription="@string/login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_bg"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:padding="@dimen/_5sdp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/emailBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/stayBlack"
                android:gravity="center"
                android:background="@drawable/button_bg4"/>

            <TextView
                android:id="@+id/phoneBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/phone"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/stayBlack"
                android:gravity="center"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_25sdp">
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:background="@drawable/button_bg2"
                android:drawableStart="@drawable/email"
                android:drawablePadding="@dimen/_10sdp"
                android:textSize="@dimen/_15ssp"
                android:hint="@string/email"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/appColor"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />

            <ImageView
                android:id="@+id/emailError"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:contentDescription="@string/email"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/phoneLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:visibility="gone">
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:background="@drawable/button_bg2"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="@dimen/_10sdp"
                android:textSize="@dimen/_15ssp"
                android:hint="@string/phone"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/appColor"
                android:importantForAutofill="no"
                android:inputType="phone"
                tools:ignore="LabelFor" />

            <ImageView
                android:id="@+id/phoneError"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:contentDescription="@string/email"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_25sdp">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:background="@drawable/button_bg2"
                android:drawableStart="@drawable/password"
                android:drawablePadding="@dimen/_10sdp"
                android:textSize="@dimen/_15ssp"
                android:hint="@string/password"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/appColor"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/visibility"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/visibility"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:contentDescription="@string/password"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:text="@string/forgotPassword"
            android:textColor="@color/appColor"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:background="@drawable/button_bg3"
            android:text="@string/login"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/stayWhite"
            android:textAllCaps="true"
            android:gravity="center"
            android:enabled="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noAccount"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/signUp"
                android:textColor="@color/appColor" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>