<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.registration.RegistrationActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/registration"
            android:contentDescription="@string/login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_bg"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:padding="@dimen/_5sdp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/emailBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/stayBlack"
                android:gravity="center"
                android:background="@drawable/button_bg4"/>

            <TextView
                android:id="@+id/phoneBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/phone"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/stayBlack"
                android:gravity="center"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_25sdp">
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:background="@drawable/button_bg2"
                android:drawableStart="@drawable/name"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/name"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/appColor"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <ImageView
                android:id="@+id/nameError"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:contentDescription="@string/email"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_25sdp">
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:background="@drawable/button_bg2"
                android:drawableStart="@drawable/email"
                android:drawablePadding="@dimen/_10sdp"
                android:textSize="@dimen/_15ssp"
                android:hint="@string/email"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/appColor"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />

            <ImageView
                android:id="@+id/emailError"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:contentDescription="@string/email"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:ccp_autoDetectCountry="true"
            app:ccp_autoFormatNumber="true"
            app:ccp_contentColor="@color/appColor"
            app:ccp_countryPreference="PS"
            app:ccp_showFlag="true"
            app:ccp_autoDetectLanguage="true"
            app:ccp_showFullName="true"
            android:gravity="center"
            android:background="@drawable/button_bg"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/phoneLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:visibility="gone">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:background="@drawable/button_bg2"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="@dimen/_10sdp"
                android:textSize="@dimen/_15ssp"
                android:hint="@string/phone"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/appColor"
                android:importantForAutofill="no"
                android:inputType="phone"
                tools:ignore="LabelFor" />

            <ImageView
                android:id="@+id/phoneError"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:contentDescription="@string/email"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_25sdp">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:background="@drawable/button_bg2"
                android:drawableStart="@drawable/password"
                android:drawablePadding="@dimen/_10sdp"
                android:textSize="@dimen/_15ssp"
                android:hint="@string/password"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/appColor"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="LabelFor"/>

            <ImageView
                android:id="@+id/visibility"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/visibility"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:contentDescription="@string/password"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_25sdp">
            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:background="@drawable/button_bg2"
                android:drawableStart="@drawable/password"
                android:drawablePadding="@dimen/_10sdp"
                android:textSize="@dimen/_15ssp"
                android:hint="@string/confirmPassword"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/appColor"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="LabelFor"/>

            <ImageView
                android:id="@+id/visibility2"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/visibility"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:contentDescription="@string/password"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/privacyPolicyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_25sdp">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/privacyPolicyCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacyPolicy" />

            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacyPolicy2"
                android:textColor="@color/appColor"
                android:layout_marginStart="@dimen/_5sdp"/>
        </LinearLayout>

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:background="@drawable/button_bg3"
            android:text="@string/signUp"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/stayWhite"
            android:textAllCaps="true"
            android:gravity="center"
            android:enabled="false"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>