<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.registration.password.ResetPasswordActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_25sdp">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:background="@drawable/button_bg2"
                android:drawableStart="@drawable/password"
                android:drawablePadding="@dimen/_10sdp"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/appColor"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="LabelFor"/>

            <ImageView
                android:id="@+id/visibility"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/visibility"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:contentDescription="@string/password"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/confirmPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:text="@string/confirmPassword"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_25sdp">
            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:background="@drawable/button_bg2"
                android:drawableStart="@drawable/password"
                android:drawablePadding="@dimen/_10sdp"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/appColor"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="LabelFor"/>

            <ImageView
                android:id="@+id/visibility2"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/visibility"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:contentDescription="@string/password"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:background="@drawable/button_bg3"
            android:text="@string/save"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/white"
            android:gravity="center"
            android:enabled="false"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>